[CHK-492] Implement command handlers for transaction authorization status update (#35)
* feat(nodo): add `closePayment` implementation to Nodo client

* refactor: rename `Authorize{Command,Handler}` -> `RequestAuthorization{Command,Handler}`

* feat(closepayment): add call to Node `closePayment`

* build: fix build

* refactor(auth): include transaction id in authorization info

* refactor(auth): remove `paymentTypeCode` from auth request

* refactor(auth): remove broker name from auth request

* refactor(auth): remove psp channel code from auth request

* refactor(auth): use data from authorization to invoke Nodo `closePayment`

* refactor: remove `additionalInformations` field from auth status update request

* refactor(auth): remove Nodo closepayment responsibilities from authorization handler

* refactor(auth): separate Nodo transaction closure into separate event

* feat(closure): add transaction closure after transaction authorization

* test(auth): add auth controller tests

* test(auth): add tests for auth in transactions service

* test: add tests for closure and auth handlers

* refactor: rename event OUTCOME_UPDATED -> CLOSURE_REQUESTED

* refactor: fix log string
